--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		<h1>vvv's Goober Translator</h1>
 		<h2>it just converts letter set from Latex to Native and vice versa, when done, press "Translate" to get the result.</h2>
 		<h3>(surprised i even managed to fit it into a single html file lmao. credit to nikothegamer#5275 for the original idea. You can check their translator <a href="https://nikothegamer100.github.io/latex-language-translator/">here</a>)</h3>
+		<h4>btw don't use Uppercase letters, they're not interpreted! I'll make it automatically lowercase everything once I'll have time!</h4>
 
 		<input id="LtoN" type="text" style="width: 450px">Latex -> Native <button onclick="LatexToNative()" style="background-color:rgb(66,66,66)">Translate</button>
 	</br>
