--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 	<body>
 		<h1>vvv's Goober Translator</h1>
 		<h2>it just converts letter set from Latex to Native and vice versa, when done, press "Translate" to get the result.</h2>
-		<h3>(surprised i even managed to fit it into a single html file lmao. credit to nikothegamer#5275 for the original idea. You can check their translator <a href="https://nikothegamer100.github.io/latex-language-translator/">here</a>)</h3>
-		<h4>btw don't use Uppercase letters, they're not interpreted! I'll make it automatically lowercase everything once I'll have time!</h4>
+		<h3>credit to nikothegamer#5275 for the original idea. You can check their translator <a href="https://nikothegamer100.github.io/latex-language-translator/">here</a></h3>
+		<h3>you can check <a href="https://github.com/vvv331/TSCLatexTranslator">the source-code here!</a></h3>
+		<h4>Uppercase letters are automatically lowercased because I don't think this language has uppercase letters.</h4>
 
 		<input id="LtoN" type="text" style="width: 450px">Latex -> Native <button onclick="LatexToNative()" style="background-color:rgb(66,66,66)">Translate</button>
 	</br>
@@ -109,6 +110,7 @@
 			function NativeToLatex() {
 				let input = NtoLinput.value
 				if (typeof input === "string") {
+					input = input.toLowerCase()
 					let result = "";
 					for (letter of input) {
 						result += symbolList[letter] ? symbolList[letter] : letter;
