Added fonts and icon for it.
Idk, looks cool.

--- a/index.html
+++ b/index.html
@@ -2,20 +2,28 @@
 <html>
 	<head>
 		<title>vvv's Goober Translator</title>
+		<link rel="icon" type="image/x-icon"  href="Whitelatex.ico"></link>
 		
 		<style>
+
+			@font-face {
+				font-family: "Roboto Mono";
+				src: url("RobotoMono.ttf");
+			}
+
 			body {
 				background-color:rgb(36,36,36);
 			}
 			* {
+				font-family: "Roboto Mono";
 				color: white;
 			}
 			.key {
 				height:40px;
 				width:40px;
-				font-size:16px;
+				font-size:14px;
 				background-color:rgb(55,55,55);
-				line-height: 0.9;
+				line-height: 1.1;
 				text-align:center;
 				margin: 3px;
 			}
