--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 		<h3>you can check <a href="https://github.com/vvv331/TSCLatexTranslator">the source-code here!</a></h3>
 		<h4>Uppercase letters are automatically lowercased because I don't think this language has uppercase letters.</h4>
 
-		<input id="LtoN" type="text" style="width: 450px">Latex -> Native <button onclick="LatexToNative()" style="background-color:rgb(66,66,66)">Translate</button>
+		<textarea id="LtoN" type="text" style="width: 450px; background-color:rgba(20,20,20,1)"></textarea>Latex -> Native <button onclick="LatexToNative()" style="background-color:rgb(66,66,66)">Translate</button>
 	</br>
-		<input id="NtoL" type="text" style="width: 450px" on>Native -> Latex <button onclick="NativeToLatex()" style="background-color:rgb(66,66,66)">Translate</button>
+		<textarea id="NtoL" type="text" style="width: 450px; background-color:rgba(20,20,20,1)"></textarea>Native -> Latex <button onclick="NativeToLatex()" style="background-color:rgb(66,66,66)">Translate</button>
 		<h2>You can use symbol set from here below if you'd like to write in Latex letter set.</h2>
 		<div id="keyboard" style="display: flex; width: 48	0px; height:150px; background-color:rgba(77,77,77); flex-wrap: wrap">
 			<button class="key h" key="σ">a<br>σ</div>
 		</div>
-		<input id="keyboardResult" type="text" style="width: 450px"></input>
+		<textarea id="keyboardResult" type="text" style="width: 450px; background-color:rgba(20,20,20,1)"></textarea>
 
 
 		<script>
