Put a line break after the numbers

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			}
 
 			let invertedList = {}
-			let LineBreak = ["p", "l"]; //this is used so we add a linebreak for keyboard.
+			let LineBreak = ["p", "l", "9"]; //this is used so we add a linebreak for keyboard.
 			for (key in symbolList) {
 				let translatedKey = symbolList[key] //converts original letter set into cipher.
 				invertedList[symbolList[key]] = key;
