--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 		<h3>credit to nikothegamer#5275 for the original idea. You can check their cipher tool <a href="https://nikothegamer100.github.io/latex-language-translator/">here</a></h3>
 		<h3>you can check <a href="https://github.com/vvv331/TSCLatexTranslator">the source-code here!</a></h3>
 		<h4>Uppercase letters are automatically lowercased because I don't think this language has uppercase letters.</h4>
+		<br>
+		<h4>PSA: This website will be undeployed by the 1st September, if you wanna continue using it, consider downloading file from GitHub, or make your own fork of it.</h4>
+		<h4>Reason why I'm doing this in the first place is that I'm no longer attached to this community at all, and I kinda wanna start slowly dissociating myself from it.</h4>
 
 		<textarea id="LtoN" type="text" style="width: 450px; background-color:rgba(20,20,20,1)"></textarea>Latex -> Native <button onclick="LatexToNative()" style="background-color:rgb(66,66,66)">Translate</button>
 	</br>
